# sniff-schema

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
sniff_schema/: __init__.py
