[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sniff-schema"
version = "0.1.2"
description = "Infer schema from JSON or CSV data — output as TypeScript, Pydantic, or Markdown"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  { name = "gitwingo", email = "gitwingo@users.noreply.github.com" }
]
keywords = ["schema", "json", "csv", "typescript", "pydantic", "data", "cli", "developer-tools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
dependencies = [
  "httpx>=0.27.0,<1.0",
  "rich>=13.7.0,
  "typer>=0.12.0,<1.0",
]

[project.scripts]
sniff-schema = "sniff_schema:app"

[project.urls]
Homepage    = "https://github.com/gitwingo/sniff-schema"
Repository  = "https://github.com/gitwingo/sniff-schema"
"Bug Tracker" = "https://github.com/gitwingo/sniff-schema/issues"

[tool.hatch.build.targets.wheel]
packages = ["sniff_schema"]
